--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,12 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo $_PhongMX # this env var must be set within the project
+      - run:
+          name: "echo an env var that is part of our project"
+          command: |
+            echo $_PhongMX # this env var must be set within the project
+
+  
 workflows:
   # Name the workflow "welcome"
   welcome:
