--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,9 @@ jobs:
       - run:
           name: "echo an env var that is part of our project"
           command: |
-            echo $_PhongMX # this env var must be set within the project
+            echo "text to output here" > output.txt
+           # save the files your deploy step needs
+      - persist_to_workspace:
+          root: .     # relative path to our working directory
+          paths:      # file globs which will be persisted to the workspace
+           - rand_*
