--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,15 +5,16 @@ jobs:
     docker:
       - image: ubuntu:14.04
     steps:
+      - run: mkdir -p workspace
       - run:
           name: "save text to file"
           command: |
-            echo "text to output here" > output.txt
+            echo "text to output here" > workspace/echo-output/output.txt
 
       - persist_to_workspace:
-          root: .     # relative path to our working directory
+          root: workspace     # relative path to our working directory
           paths:      # file globs which will be persisted to the workspace
-           - .
+           - echo-output
   
   read:
     docker:
@@ -24,7 +25,7 @@ jobs:
           command: |
             cat output.txt
       - attach_workspace:
-          at: .
+          at: /tmp/workspace
 
 workflows:
   test-env-vars:
