--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,28 @@
 version: 2.1
 
 jobs:
-  save:
+  save_hello_world_output:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run:
-          name: "save text to file"
-          command: |
-            echo "text to output here" > ~/output.txt
-
+      - run: echo "hello world" > ~/output.txt
       - persist_to_workspace:
-          root: ~/     # relative path to our working directory
-          paths:      # file globs which will be persisted to the workspace
-           - output.txt
-  
-  read:
+          root: ~/
+          paths:
+            - output.txt
+
+  print_output_file:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - attach_workspace:
           at: ~/
-      - run:
-          name: "read text from file"
-          command:
-            cat ~/output.txt
-      
+      - run: cat ~/output.txt
 
 workflows:
-  test-env-vars:
+  my_workflow:
     jobs:
-      - save
-      - read
-
+      - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
