--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,6 @@ workflows:
   my_workflow:
     jobs:
       - save_hello_world_output
-      - print_output_file
+      - print_output_file:
+          requires:
+            - save_hello_world_output
